<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_page">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="146dp"
        android:background="@drawable/btn_choose_image"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tvSave"
            android:textColor="@color/text_grey_speech"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edTextFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hintSave"
            android:textColorHint="@color/text_grey"
            android:textSize="12sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:id="@+id/btnSave"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_speech"
                android:onClick="btnSave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvBtnSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/btnSave"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnCancelSave"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_cancel_save"
                android:onClick="btnSave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSave"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvBtnCancelSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/btnCancelSave"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>