<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_page"
    tools:context=".ImageToTextPage">

    <ImageView
        android:id="@+id/iv_background_speech"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_file_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/image_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="btnBackImage"
        android:src="@drawable/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btnDownloadLinearImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_choose_image"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnDownloadImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/download" />

    </LinearLayout>

    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/head_choose"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_file_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnChooseCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/background_choose_speech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background_speech"
        app:layout_constraintVertical_bias="0.968">

        <LinearLayout
            android:id="@+id/etTextImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/tv_speech"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnChooseLinear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edTextImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Text Will Display Here"
                android:justificationMode="inter_word"
                android:textColor="@color/text_grey"
                android:textColorHint="@color/text_grey"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnChooseLinear"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_speech"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btnChooseAgainImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/take_again"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCopyLinear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_speech"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/btnCopyImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/btn_copy" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDeleteLinear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_speech"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCopyLinear">

            <ImageView
                android:id="@+id/btnDeleteImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/btn_delete" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>